' Preview durch <Alt>d

@startuml ER Diagramm

' hide the spot
hide circle

' evtl. Prbleme mit Kraehenfuessen vermeiden
skinparam linetype ortho

entity "Packstation" {
  * id: integer <<generated>>
  --
  * version: integer
  * nummer: text
    baudatum: timestamp
    ausstattung: text
  * **adresse_id**: integer <<FK>>
  * erzeugt: timestamp
  * aktualisiert: timestamp
}

entity "Adresse" {
  * id: integer <<generated>>
  --
    strasse: text
    hausnummer: text
  * postleitzahl: text
  * stadt: text
}

entity "Paket" {
  * id: integer <<generated>>
  --
    **packstation_id**: integer <<FK>>
  * nummer: text
    maxGewichtInKg: number
}

Packstation ||..|| Adresse
Packstation ||..o{ Paket

@enduml
